Another final scene rendering algorithm proposition.
As fragment shader cannot output any value or statistics nicely,
let's move on with playing with the stencil buffer instead of scissor test.
This may be a better proposition as it does not require to capture the
rendered frame recursively.
Drawbacks may be that:
 - blending may require another pass drawing and blending the wall,
   if proper blending cannot be done while drawing the transformed scene
   (what about translucent object going through the breach?...)
 - detection of visibility (the problem simply moved in fact),
   done through the feedback rendering mode, that may be slow

--- a/README.textile
+++ b/README.textile
@@ -5,7 +5,7 @@ h2. Inspired from the game Portal, from Valve
 Breach is an attempt to recreate the core experience of the game Portal from Valve.
 
 The experience uses some OpenGL techniques to achieve the visual experience of a _spacial breach_ in the world (a teleportation tunnel toward another place).
-Those techniques are described in the @RENDERING@ file.
+Those techniques are described in the @RENDERING.textile@ file.
 
 h2. Evolution
 
