- New rendering engine - Improved directory layout: include, test.
Long description:
- Object model abstracting composed objects (like the whole scene itself).
- Include groups the HPP and TCC files.
  They are part of the source, not extern libraries.
- test/ mimics the root repository structure.
  Its src/ folder contains CPP files aimed to be compiled alone,
  creating a single test program. (Makefile already updated)
- Matrix:
  - New vararg constructor, easier than the array constructor.
  - New helper scaling matrix
  - New helper identity matrix
  - Default outstream for helper print is cout
- Main scene:
  - z has been reversed back to classic usage (texture were mirrored)
  - Use of the new rendering engine.
  - Remark: Breaches are not yet part of the new rendering pipeline.
  - Fixed (works in general case) selection analysis
  - Usage of OpenGL 3.2, through the context initialization

--- a/README.textile
+++ b/README.textile
@@ -24,15 +24,17 @@ h3. Current status
 
 I didn't go very far yet.
 I experienced the following:
-* Lightning
-* Player motion (space like, no gravity)
+* Lighting
+* Player motion (space like, no gravity, no collision test)
 * Camera motion
 * Click shooting/selection
 * Outline of hidden breach
 * Transparent breach, showing what's behind
+* Rendering engine
 
 h3. Forthcoming
 
+* Shooting breaches
 * Linking of two breaches, displaying the actual other end
 
 h3. Later future
