Better object model, and souple implementation of the visitor pattern.
Visitor pattern with dynamic linkage of specialized callbacks.
It will be used for selected/shooted object resolving.

Created compilation and running guide.
Now using libsigc++-2.0 as dependency.

--- a/README.textile
+++ b/README.textile
@@ -7,6 +7,10 @@ Breach is an attempt to recreate the core experience of the game Portal from Val
 The experience uses some OpenGL techniques to achieve the visual experience of a _spacial breach_ in the world (a teleportation tunnel toward another place).
 Those techniques are described in the @RENDERING.textile@ file.
 
+h2. Compiling and running
+
+See @INSTALL.textile@ file.
+
 h2. Evolution
 
 h3. Eventual goal
